2009-Oct-8      cpo     Fix bug with run number allocation during automatic reconfig when changing config db.  Tagged V01-03-02.
2009-Oct-08     weaver  Tag V01-04-00.  Evr no longer uses command line argument for opcode.
			Added configdb support for versioned configurations.
2009-Oct-7      caf     Version to support logbook entries and filename convention.  Tag V01-03-00.
2009-Oct-6      cpo     Support for sending run/expt number to event level.
2009-Oct-05	weaver	Tag V01-02-06 corresponding to current -> 1.2.6
2009-Sep-29     tomytsai  Add rceProxy application in pdsapp/dev/rceProxy.cc
2009-Sep-24     weaver  Added scan and reconfigure features to run control.
2009-Sep-24     cpo     More support for saving/loading acqiris calibrations.
2009-Sep-11     weaver  Added scan tool for creating control configurations.  
            Added bld to partition select screen in control_gui.
            Changed initial target state from Mapped to Configured.
2009-Aug-27 tomytsai    Add epics data collector level 1 (segment) node in pdsapp/dev/epicArch.cc
2009-Aug-27 tomytsai    Add epics data xtc archiver sample program in pdsapp/epics
2009-Aug-26     cpo     Fix AcqConfig.cc limits for offset/fullscale for acqiris.
2009-Aug-24 weaver  Added numeric key browser (configdb_list).  Add "Save data" option to mondisplay.
2009-Aug-22 weaver  Fixed most reconfigure problems in monshm.cc
2009-Aug-22     cpo     Fix datagram writing bug in Recorder.cc
2009-Aug-21     cpo     Add acqiris calibration code, and profile histograms to AcqConfig
2009-Aug-18 weaver  Tag V01-01-00.  Added run statistics to control_gui display by forwarding
            summarized L1Accepts (damage and size) to control level.  Created shared memory
            client version of monobs.  Changed interface to configdb to allow editing
            of XTC files.  Versioning is kept internally.
2009-Aug-15 weaver  Tag V01-00-03.  Changed monobs/CamDisplay and AcqDisplay to